<resources>
    <string name="app_name">South Valley University</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">about</string>
    <string name="about_university">About university</string>
    <string name="administration">Administration</string>
    <string name="faculties">Faculties</string>
    <string name="students">Students</string>
    <string name="results">Results</string>
    <string name="contact_us">Contact us</string>
    <string name="socialMedia">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="south_vally_university">South valley university</string>
    <string name="main">Main</string>
    <string name="news">News</string>
    <string name="todo">TODO</string>
</resources>
